# Protos

./: .gitignore  .mail.txt.swp  CMakeLists.txt  Dockerfile  Makefile  README.md  args.c  args.h  buffer.c  data.c  data.h  docker.sh  foo.c  main.c  mng.c  mng.h  request.c  request.h  request_test.c  selector.c  selector_test.c  smtp.c  smtp.h  stress_test.c  test.c  udpClient.c  udpServer.c  udpServer.h  utils.c  utils.h
libs/: smtpnio.h
src/: Makefile  main.c  request.c  request.h  request_test  request_test.c  smtp.c  smtp.h  smtpd  stm.c
src/libs/: request.c  smtpnio.c  smtpnio.h
